apps/uptime-kuma/route.yaml
# apps/uptime-kuma/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  parentRefs:
    - name: base-gateway
      namespace: cluster-gateway
      sectionName: uptime-kuma-https     # Attach to the HTTPS listener
  hostnames:
    - "uptime-kuma.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
